--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     implementation project(path: ":domain")
+    implementation project(path: ":data")
 
     implementation Deps.INSTANCE.coreKtx
     implementation Deps.INSTANCE.appCompat
