--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -7,13 +7,11 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.haur.daviget"
         minSdk 23
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -33,15 +31,10 @@ android {
 
 dependencies {
 
-    implementation project(path: ":domain")
-    implementation project(path: ":data")
-    //implementation project(path: ":presentation")
-
-    implementation Deps.INSTANCE.coreKtx
-    implementation Deps.INSTANCE.appCompat
-    implementation Deps.INSTANCE.material
-    implementation Deps.INSTANCE.koinAndroid
-    implementation Deps.INSTANCE.koin
-
-    testImplementation TestDeps.INSTANCE.JUnit
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
