Added presentation module and setup is done for jetpack compose

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -12,6 +12,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -27,14 +30,30 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion Versions.INSTANCE.composeVersion
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation Deps.INSTANCE.coreKtx
+    implementation Deps.INSTANCE.appCompat
+    implementation Deps.INSTANCE.material
+    implementation Deps.INSTANCE.composeUI
+    implementation Deps.INSTANCE.composeMaterial
+    implementation Deps.INSTANCE.composePreviewTooling
+    implementation Deps.INSTANCE.lifeCycleRuntime
+    implementation Deps.INSTANCE.composeActivity
+
+    testImplementation TestDeps.INSTANCE.JUnit
+    debugImplementation Deps.INSTANCE.composeUiTooling
 }
