--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     implementation project(path: ":domain")
     implementation project(path: ":data")
-    //implementation project(path: ":presentation")
+    implementation project(path: ":presentation")
 
     implementation Deps.INSTANCE.coreKtx
     implementation Deps.INSTANCE.appCompat
