Showing basic information of the post, title, author, time and thumbnail

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation Deps.INSTANCE.coroutinesAndroid
     implementation Deps.INSTANCE.koinAndroid
     implementation Deps.INSTANCE.koin
+    implementation Deps.INSTANCE.coil
 
     testImplementation TestDeps.INSTANCE.JUnit
     debugImplementation Deps.INSTANCE.composeUiTooling
